[workspace]
resolver = "3"
members = [
    "jose-aes-gcm",
    "jose-aes-kw",
    "jose-core",
    "jose-ecdsa",
    "jose-eddsa",
    "jose-hmac",
    "jose-claims",
    "jose-rsa",
    "jose-test",
]

[workspace.dependencies]
jose-aes-gcm = { path = "jose-aes-gcm", version = "0.1.0" }
jose-aes-kw = { path = "jose-aes-kw", version = "0.1.0" }
jose-core = { path = "jose-core", version = "0.1.0" }
jose-ecdsa = { path = "jose-ecdsa", version = "0.1.0" }
jose-eddsa = { path = "jose-eddsa", version = "0.1.0" }
jose-hmac = { path = "jose-hmac", version = "0.1.0" }
jose-rsa = { path = "jose-rsa", version = "0.1.0" }
jose-claims = { path = "jose-claims", version = "0.1.0" }
base64ct = { version = "1", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "2", default-features = false }
hmac = { version = "0.12", default-features = false }
p256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
p384 = { version = "0.13", default-features = false, features = ["ecdsa"] }
rsa = { version = "0.9", default-features = false }
sha2 = { version = "0.10", default-features = false, features = ["oid"] }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
aes-kw = { version = "0.2", default-features = false, features = ["alloc"] }
getrandom = { version = "0.3" }
jiff = { version = "0.2" }
