[workspace]
resolver = "3"
members = [
    "no-way-jose-aes-cbc-hs",
    "no-way-jose-aes-gcm",
    "no-way-jose-aes-kw",
    "no-way-jose-core",
    "no-way-jose-ecdsa",
    "no-way-jose-eddsa",
    "no-way-jose-hmac",
    "no-way-jose-claims",
    "no-way-jose-rsa",
    "no-way-jose-test",
]

[workspace.dependencies]
no-way-jose-aes-cbc-hs = { path = "no-way-jose-aes-cbc-hs", version = "0.1.0" }
no-way-jose-aes-gcm = { path = "no-way-jose-aes-gcm", version = "0.1.0" }
no-way-jose-aes-kw = { path = "no-way-jose-aes-kw", version = "0.1.0" }
no-way-jose-core = { path = "no-way-jose-core", version = "0.1.0" }
no-way-jose-ecdsa = { path = "no-way-jose-ecdsa", version = "0.1.0" }
no-way-jose-eddsa = { path = "no-way-jose-eddsa", version = "0.1.0" }
no-way-jose-hmac = { path = "no-way-jose-hmac", version = "0.1.0" }
no-way-jose-rsa = { path = "no-way-jose-rsa", version = "0.1.0" }
no-way-jose-claims = { path = "no-way-jose-claims", version = "0.1.0" }
base64ct = { version = "1", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "2", default-features = false }
hmac = { version = "0.12", default-features = false }
p256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
p384 = { version = "0.13", default-features = false, features = ["ecdsa"] }
rsa = { version = "0.9", default-features = false }
sha2 = { version = "0.10", default-features = false, features = ["oid"] }
aes = { version = "0.8", default-features = false }
cbc = { version = "0.1", default-features = false, features = ["alloc", "block-padding"] }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
aes-kw = { version = "0.2", default-features = false, features = ["alloc"] }
getrandom = { version = "0.3" }
jiff = { version = "0.2" }
