[workspace]
resolver = "3"
members = [
    "no-way-jose-aes-cbc-hs",
    "no-way-jose-aes-gcm",
    "no-way-jose-aes-gcm-kw",
    "no-way-jose-aes-kw",
    "no-way-jose-core",
    "no-way-jose-ecdh-es",
    "no-way-jose-ecdsa",
    "no-way-jose-eddsa",
    "no-way-jose-graviola",
    "no-way-jose-hmac",
    "no-way-jose-claims",
    "no-way-jose-pbes2",
    "no-way-jose-rsa",
    "no-way-jose-aws-lc",
    "no-way-jose-test",
]

[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/conradludgate/no-way-jose"
keywords = ["jose", "jwt", "jws", "jwe", "jwk"]
categories = ["authentication", "cryptography"]
rust-version = "1.85"

[workspace.dependencies]
no-way-jose-aes-cbc-hs = { path = "no-way-jose-aes-cbc-hs", version = "0.1.0-rc.3" }
no-way-jose-aes-gcm = { path = "no-way-jose-aes-gcm", version = "0.1.0-rc.3" }
no-way-jose-aes-gcm-kw = { path = "no-way-jose-aes-gcm-kw", version = "0.1.0-rc.3" }
no-way-jose-aes-kw = { path = "no-way-jose-aes-kw", version = "0.1.0-rc.3" }
no-way-jose-core = { path = "no-way-jose-core", version = "0.1.0-rc.3" }
no-way-jose-ecdh-es = { path = "no-way-jose-ecdh-es", version = "0.1.0-rc.3" }
no-way-jose-ecdsa = { path = "no-way-jose-ecdsa", version = "0.1.0-rc.3" }
no-way-jose-eddsa = { path = "no-way-jose-eddsa", version = "0.1.0-rc.3" }
no-way-jose-hmac = { path = "no-way-jose-hmac", version = "0.1.0-rc.3" }
no-way-jose-pbes2 = { path = "no-way-jose-pbes2", version = "0.1.0-rc.3" }
no-way-jose-rsa = { path = "no-way-jose-rsa", version = "0.1.0-rc.3" }
no-way-jose-claims = { path = "no-way-jose-claims", version = "0.1.0-rc.3" }
no-way-jose-graviola = { path = "no-way-jose-graviola", version = "0.1.0-rc.3" }
no-way-jose-aws-lc = { path = "no-way-jose-aws-lc", version = "0.1.0-rc.3" }
aws-lc-rs = "1"
graviola = "0.3"
base64ct = { version = "1", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "3.0.0-pre.6", default-features = false }
x25519-dalek = { version = "3.0.0-pre.6", default-features = false }
hmac = { version = "0.13.0-rc.6", default-features = false }
pbkdf2 = { version = "0.13.0-rc.9", default-features = false }
p256 = { version = "0.14.0-rc.7", default-features = false, features = ["ecdsa", "ecdh"] }
p384 = { version = "0.14.0-rc.8", default-features = false, features = ["ecdsa", "ecdh"] }
p521 = { version = "0.14.0-rc.8", default-features = false, features = ["ecdsa"] }
rsa = { version = "0.10.0-rc.17", default-features = false, features = ["getrandom"] }
sha1 = { version = "0.11", default-features = false }
sha2 = { version = "0.11", default-features = false, features = ["oid"] }
aes = { version = "0.9.0-rc.4", default-features = false }
cbc = { version = "0.2.0-rc.4", default-features = false, features = ["alloc", "block-padding"] }
aes-gcm = { version = "0.11.0-rc.3", default-features = false, features = ["aes", "alloc"] }
aes-kw = { version = "0.3.0-rc.2", default-features = false }
subtle = { version = "2", default-features = false }
error-stack = { version = "0.7", default-features = false }
getrandom = { version = "0.4" }
jiff = { version = "0.2" }
