[package]
name = "jose-test"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
jose-core = { workspace = true }
jose-ecdsa = { workspace = true }
jose-hmac = { workspace = true }
jose-json = { workspace = true }
base64ct = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
