[package]
name = "jose-test"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
jose-aes-gcm = { workspace = true }
jose-aes-kw = { workspace = true }
jose-core = { workspace = true }
jose-ecdsa = { workspace = true }
jose-eddsa = { workspace = true }
jose-hmac = { workspace = true }
jose-rsa = { workspace = true }
jose-json = { workspace = true }
base64ct = { workspace = true }
rsa = { workspace = true }
