[package]
name = "no-way-jose-aes-cbc-hs"
version = "0.1.0-rc.1"
edition = "2024"
description = "AES-CBC + HMAC-SHA JWE content encryption for no-way-jose"
readme = "README.md"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
no-way-jose-core = { workspace = true }
error-stack = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
getrandom = { workspace = true }
