[package]
name = "no-way-jose-aes-gcm-kw"
version = "0.1.0-rc.2"
edition = "2024"
description = "AES-GCM Key Wrap (A128GCMKW, A192GCMKW, A256GCMKW) JWE key management for no-way-jose"
readme = "README.md"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
no-way-jose-core = { workspace = true }
error-stack = { workspace = true }
aes = { workspace = true }
aes-gcm = { workspace = true }
base64ct = { workspace = true }
getrandom = { workspace = true }
