[package]
name = "no-way-jose-aes-gcm"
version = "0.1.0-rc.1"
edition = "2024"
description = "AES-GCM JWE content encryption (A128GCM, A192GCM, A256GCM) for no-way-jose"
readme = "README.md"

[dependencies]
no-way-jose-core = { workspace = true }
error-stack = { workspace = true }
aes = { workspace = true }
aes-gcm = { workspace = true }
getrandom = { workspace = true }
