[package]
name = "no-way-jose-aes-kw"
version = "0.1.0-rc.1"
edition = "2024"
description = "AES Key Wrap (A128KW, A192KW, A256KW) JWE key management for no-way-jose"
readme = "README.md"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
no-way-jose-core = { workspace = true }
error-stack = { workspace = true }
aes-kw = { workspace = true }
getrandom = { workspace = true }
