[package]
name = "no-way-jose-claims"
version = "0.1.0-rc.1"
edition = "2024"
description = "JWT registered claims and composable validators for no-way-jose"
readme = "README.md"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
no-way-jose-core = { workspace = true }
error-stack = { workspace = true }
jiff = { workspace = true }
