[package]
name = "no-way-jose-ecdh-es"
version = "0.1.0-rc.2"
edition = "2024"
description = "ECDH-ES JWE key agreement (P-256, P-384, X25519) for no-way-jose"
readme = "README.md"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
no-way-jose-core = { workspace = true }
error-stack = { workspace = true }
p256 = { workspace = true }
p384 = { workspace = true }
x25519-dalek = { workspace = true, features = ["static_secrets"] }
aes-kw = { workspace = true }
sha2 = { workspace = true }
base64ct = { workspace = true }
getrandom = { workspace = true, features = ["sys_rng"] }
