[package]
name = "no-way-jose-ecdsa"
version = "0.1.0-rc.3"
edition = "2024"
description = "ECDSA JWS algorithms (ES256, ES384, ES512) for no-way-jose"
readme = "README.md"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
no-way-jose-core = { workspace = true }
error-stack = { workspace = true }
p256 = { workspace = true, features = ["getrandom"] }
p384 = { workspace = true }
p521 = { workspace = true }
