[package]
name = "no-way-jose-eddsa"
version = "0.1.0-rc.2"
edition = "2024"
description = "EdDSA (Ed25519) JWS algorithm for no-way-jose"
readme = "README.md"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
no-way-jose-core = { workspace = true }
error-stack = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
getrandom = { workspace = true, features = ["sys_rng"] }
