[package]
name = "no-way-jose-graviola"
version = "0.1.0-rc.1"
edition = "2024"
description = "Graviola crypto backend for no-way-jose (HMAC, ECDSA, EdDSA, RSA, AES-GCM)"
readme = "README.md"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
no-way-jose-core = { workspace = true }
error-stack = { workspace = true }
graviola = { workspace = true }
