[package]
name = "no-way-jose-hmac"
version = "0.1.0-rc.2"
edition = "2024"
description = "HMAC-SHA JWS algorithms (HS256, HS384, HS512) for no-way-jose"
readme = "README.md"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
no-way-jose-core = { workspace = true }
error-stack = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
