[package]
name = "no-way-jose-pbes2"
version = "0.1.0-rc.3"
edition = "2024"
description = "PBES2 password-based JWE key management for no-way-jose"
readme = "README.md"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
no-way-jose-core = { workspace = true }
error-stack = { workspace = true }
pbkdf2 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
aes-kw = { workspace = true }
base64ct = { workspace = true }
getrandom = { workspace = true }

[dev-dependencies]
no-way-jose-aes-gcm = { workspace = true }
