[package]
name = "no-way-jose-test"
version = "0.1.0-rc.1"
edition = "2024"
publish = false

[dependencies]
no-way-jose-aes-cbc-hs = { workspace = true }
no-way-jose-aes-gcm = { workspace = true }
no-way-jose-aes-gcm-kw = { workspace = true }
no-way-jose-aes-kw = { workspace = true }
no-way-jose-core = { workspace = true }
error-stack = { workspace = true }
no-way-jose-ecdh-es = { workspace = true }
no-way-jose-ecdsa = { workspace = true }
no-way-jose-eddsa = { workspace = true }
no-way-jose-hmac = { workspace = true }
no-way-jose-pbes2 = { workspace = true }
no-way-jose-rsa = { workspace = true }
no-way-jose-graviola = { workspace = true }
no-way-jose-aws-lc = { workspace = true }
no-way-jose-claims = { workspace = true }
base64ct = { workspace = true }
p256 = { workspace = true }
p384 = { workspace = true }
p521 = { workspace = true }
getrandom = { workspace = true }
x25519-dalek = { workspace = true, features = ["static_secrets"] }
aws-lc-rs = { workspace = true }
graviola = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
